# DEMON

./: .env.example  .gitignore  LICENSE  README.md  acestep.local.example.json  pyproject.toml
acestep/: constants.py  fixtures.py  model_downloader.py  paths.py
acestep/audio/: key_detection.py
acestep/engine/: __init__.py  __main__.py  conditions.py  dcw.py  diffusion.py  kernels.py  lora.py  masking.py  model_context.py  obs.py  ode_steps.py  ops.py  runtime_init.py  server.py  session.py  stream.py
acestep/nodes/: __init__.py  audio_nodes.py  base.py  channel_nodes.py  cond_nodes.py  curve_nodes.py  diffusion_nodes.py  lora_nodes.py  mask_nodes.py  model_nodes.py  semantic_nodes.py  types.py  vae_nodes.py
acestep/streaming/: commands.py  config.py  encode.py  events.py  knobs.py  pipeline_runner.py  session.py  source.py  state.py  warmup.py
demos/: test_noise_sharing.py  test_rcfg.py  test_stream_cover_graph.py
demos/realtime_motion_graph/: README.md  __init__.py  __main__.py  legacy_full_demo.py  pipeline.py  server.py
demos/realtime_motion_graph_web/: README.md  __init__.py  __main__.py  audio_codec.py  backend.py  knobs.py  mcp_server.py  pipeline.py  server.py  ws_adapter.py
docs/: README.md  TRT.md  index.html
examples/: morph_cover.py  realtime_cover.py  session_demo.py  text_to_music_trt.py
examples/covers/: _run.py  _textencode_shim.py  conditioning_average.py  cover_basic.py  cover_semantic_blend.py  guidance_curve.py  initial_noise_curve.py  latent_noise_mask.py  lora_generation.py  ode_noise_injection.py  prompt_blend.py  sde_denoise_curve.py  velocity_scaling.py  x0_target_blend.py  x0_target_from_reference.py
scope_plugin/: __init__.py  bridge.py  plugin.py
scope_plugin/workflows/: acestep_realtime_motion_graph.json
scripts/benchmarks/: bench_base_trt.py  bench_fused_euler.py  bench_vae_decode_profiles.py  bench_vram_60s_vs_240s.py  build_vae_decode_test_engines.py  vram_60s_vs_240s_results.md
scripts/calibration/: collect_activation_absmax.py  collect_decoder_calibration.py  precompute_fixture_sidecars.py
scripts/deploy/: bootstrap_h100.sh  rebuild_vae_decode.sh  restart_demo.sh  run_demo.sh  smoketest_demo.py  stage2_models_engines.sh  stage3_assets_tunnel_run.sh  sync_and_restart.sh
scripts/madmom/: convert_madmom_key_cnn.py  inspect_madmom_pkl.py
tests/: conftest.py  test_generate_parity.py  test_session.py  test_stream.py
tests/benchmarks/: _diag.py  _diag_tasks.py  bench_base_trt.py  bench_stream_trt_v6.py  bench_vae_decode_profiles.json  bench_vae_decode_profiles.py  bench_vram_60s_vs_240s.json  bench_vram_60s_vs_240s.py  build_vae_decode_test_engines.py  compare_upstream.py  gen_base_tasks.py  gen_base_trt.py  smoke_windowed_vae.py  vram_60s_vs_240s_results.md
tests/fixtures/: download.py
tests/integration/: bench_windowed_encode.py  test_live_audio_input.py  test_shared_sde_curve.py  test_stream_pipeline.py  test_stream_sde_curve.py  test_windowed_splice.py
workflows/: profile_http.py  profile_pipeline.py  realtime_cover.py  session_demo.py  session_test_all.py  text_to_music.py  text_to_music_trt.py  text_to_music_xl_turbo_compare.py
(+154 files in other folders)
