[project]
name = "demon"
version = "1.5.0"
description = "DEMON: Diffusion Engine for Musical Orchestrated Noise"
readme = "README.md"
requires-python = "==3.11.*"
license = {text = "MIT"}
dependencies = [
    # PyTorch with CUDA 12.8 - pinned to match ComfyUI
    "torch==2.9.1+cu128",
    "torchvision==0.24.1+cu128",
    "torchaudio==2.9.1+cu128",
    # Common dependencies
    "transformers>=4.51.0,<4.58.0",
    "diffusers",
    "gradio>=6.5.1",
    "matplotlib>=3.7.5",
    "scipy>=1.10.1",
    "soundfile>=0.13.1",
    "loguru>=0.7.3",
    "einops>=0.8.1",
    "accelerate>=1.12.0",
    "fastapi>=0.110.0",
    "diskcache",
    "uvicorn[standard]>=0.27.0",
    "numba>=0.63.1",
    "vector-quantize-pytorch>=1.27.15",
    "torchcodec>=0.9.1",
    "torchao",
    # Training dependencies
    "peft>=0.7.0",
    "lightning>=2.0.0",
    "tensorboard>=2.0.0",
    # Attention / inference dependencies
    "triton-windows>=3.0.0,<3.4; sys_platform == 'win32'",
    "triton>=3.0.0; sys_platform != 'win32'",
    "flash-attn @ https://github.com/kingbri1/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu128torch2.9.0cxx11abiFALSE-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11' and platform_machine == 'AMD64'",
    "flash-attn @ https://github.com/kingbri1/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu128torch2.9.0cxx11abiFALSE-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.11' and platform_machine == 'x86_64'",
    "websockets>=13.0",
    "xxhash",
    "zstandard>=0.21",
    # TensorRT acceleration
    "onnx",
    "tensorrt>=10.13,<10.14",
    "polygraphy>=0.49",
    "cuda-python>=13.0",
    "modelscope",
    "pytorch-wavelets>=1.3",
    "PyWavelets>=1.5",
    "setuptools<81",  # pytorch_wavelets uses pkg_resources, removed in setuptools 81
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchao = { index = "pypi" }
torchcodec = { index = "pypi" }

[project.scripts]
acestep-download = "acestep.model_downloader:main"

[project.entry-points.scope]
ace_step = "scope_plugin.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=9.0"]
demo = ["opencv-python", "pygame", "sounddevice", "librosa", "mido", "python-rtmidi"]
# Thin-client deps for demos/realtime_motion_graph/client.
# Install without the main project:
#   uv sync --only-group client --no-install-project
client = [
    "numpy",
    "opencv-python",
    "pygame",
    "sounddevice",
    "soundfile",
    "soxr",
    "mido",
    "python-rtmidi",
    "websockets>=13.0",
    "zstandard>=0.21",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["acestep", "scope_plugin"]
